--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Titulo</title>
+    <title>Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Carta</h1>
-    <button onclick="card">Crear carta</button>
-    <div class="container">
+   <h1>This is a card</h1>
 
-    </div>
-    <script src="script.js"></script>
+   <button onclick="card()">Clickeame beiby</button>
+   
+   <div id="container"></div>
+
+   <script src="./index.js"></script>
 </body>
 </html>
